# PGS

./: .gitignore  README.md  pyproject.toml
cam_env/easy_handeye/: wrist_to_d435.tf
configs/: config.yaml  default_config.yaml  sample_and_filter_poses.py
scripts/: BiRRT_Cons.py  animate_gaussians.py  animate_gaussians_and_pointcloud.py  auto_pipeline.py  cyclic_execute_subgoals.py  execute_subgoals.py  filter_collision_poses.py  generate_action_animation.py  move_to_home.py  real_action.py  real_vision.py  sample_and_filter_poses.py
src/fospre/animation/: animator.py  waypoints.py
src/fospre/collision/: detector.py
src/fospre/core/: camera.py  optimizer.py  utils.py
src/fospre/io/: multiview.py  scene_io.py  video_io.py
src/fospre/pose/: generator.py  ranking.py  transforms.py
src/pogs/: pogs.py  pogs_pipeline.py
src/pogs/data/utils/: dino_dataloader.py
src/pogs/data/utils/datasets/box/: table_bounding_cube.json  transforms.json
src/pogs/data/utils/datasets/box/poses/: 000.txt  001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt  011.txt  012.txt  013.txt  014.txt  015.txt  016.txt  017.txt  018.txt  019.txt  020.txt  021.txt  022.txt  023.txt  024.txt  025.txt  026.txt  027.txt  028.txt
src/pogs/dependencies/Detic/: .gitignore
src/pogs/dependencies/contact_graspnet/pointnet2/tf_ops/sampling/: 1.pkl
src/pogs/dependencies/ur5py/ur5py/: ur5.py
src/pogs/grasping/: generate_grasps_ply.py
src/pogs/scripts/: animate_gaussians.py  animate_object.py  scene_capture.py  track_main_demo.py  track_main_online_demo.py
src/pogs/tracking/: optim.py  toad_object.py
